# fzf-preview-rust.zsh

./: Cargo.toml  fzf-preview.zsh  package.json
shell/snippet/widget/: fp-auto-snippet  fp-insert-snippet
src/: main.rs  settings.rs
