[package]
name = "fzf-preview-zsh"
version = "0.1.0"
authors = ["yuki_yano <yuki.ycino@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
atty = "0.2.14"
config = "0.10.1"
dirs = "3.0.1"
log = "0.4.11"
pretty_env_logger = "0.4.0"
regex = "1.4.2"
serde = "1.0.118"
serde_derive = "1.0.118"
structopt = "0.3.21"
